# CNN-Classification-of-Chest-X-Ray-Images

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  commands.ps1  commands.sh  deploy.sh  flask_app.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: azure_deployment.yml  azure_deployment_flask_docker.yml  build-push-docker.yml  deploy-azure.yml  deploy-docs.yml  deploy-render.yml  main_chest-xray-calssification.yml  main_chest-xray-classification.yml  markdown-lint.yml  project-modernization_chest-xray-classification.yml  project-revisit_xray-classification-app.yml  project-revisit_xray-classification.yml  python-lint.yml  python-tests.yml  python-typecheck.yml  render_deployment.yml  render_deployment_docker.yml  render_deployment_flask_docker.yml  render_deployment_streamlit.yml  render_direct_deployment.yml  security-audit.yml
docs/: COMMANDS.md  architecture.md  commands.ps1  dev-guide.md  index.md
docs/development/: code-style.md  formatting.md  linting.md  logging.md  security.md  testing.md
notebooks/: Image Type Recognition.ipynb  README.txt
src/: config.py  exception.py  logger.py
src/data/: data_generator.py  data_loader.py  preprocessing.py
src/models/: __init__.py  eff_net.py  mob_net.py  models.py  train.py
src/tuning/: tune_hyperparameters.py
src/utils/: __init__.py  callbacks.py  custom_loss.py  custom_metrics.py  evaluate.py  grad_cam.py  image_classifier.py  mlflow_utils.py  tensorboard_utils.py  tensorflow_gpu_setup.py  utils.py
src/xray_classifier/: __init__.py  config.py  exception.py  logger.py
src/xray_classifier/data/: __init__.py  data_generator.py  data_loader.py
src/xray_classifier/models/: models.py  train.py
src/xray_classifier/tuning/: tune_hyperparameters.py
src/xray_classifier/utils/: callbacks.py  custom_metrics.py  download_models.py  evaluate.py  grad_cam.py  image_classifier.py  tensorflow_gpu_setup.py  utils.py
src/xray_classifier/web/: __init__.py  flask_app.py  streamlit_app.py
src/xray_classifier/web/static/css/: styles.css
src/xray_classifier/web/static/js/: scripts.js
src/xray_classifier/web/templates/: index.html  prediction.html  warning.html
static/css/: styles.css
templates/: index.html  prediction.html  warning.html
tests/: __init__.py  test_config.py  test_exception.py  test_utils.py
