[tool.poetry]
name = "x-ray-image-classifier-app"
version = "0.0.1"
description = "A Deep Learning project for disease recognition on chest X-Ray images."
authors = ["Kristiyan Bonev <k.s.bonev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JustaKris/CNN-Classification-of-Chest-X-Ray-Images"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
ipykernel = "*"
kaggle = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
tensorflow = "*"
seaborn = "*"
glob2 = "*"
mlflow = "*"
scikit-learn = "*"
scikit-image = "*"
keras-tuner = "*"
opencv-python = "*"
dill = "*"
IPython = "*"
Flask = "*"
gunicorn = "*"
streamlit = "*"
Pillow = "*"
torch = "*"
torchvision = "*"
transformers = "*"

[tool.poetry.scripts]
x-ray-image-classifier = "app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
